This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/23/25: Added script command to get the convergence angle on a Titan.

9/23/25: During STEM focus calibration on a Titan, the slope is adjusted by 
the proportional change in convergence angle.

9/17/25: Added property to set extra timeout for STEM images.

9/17/25: For DE cameras, the "Set Folder" button in the camera setup dialog
opens a folder selection dialog if the camera server is 1.0.943 or newer 
and running locally.  

9/17/25: For DE cameras, if the camera server is 1.0.943 or newer and running
locally, the SetFolderForFrames script command sets the full path instead of a
single folder name.

9/3/25: SEM_4-2-8
9/3/25: Updated redistributed Microsoft dlls to prevent crash in Advanced
Scripting with TEM server version 7.25 (In 4.2).

9/3/25: Mag IS offset calibrations can be listed or removed in the calibration 
menu, and IS offsets are listed when running ListAllCalibrations.

9/3/25: Fixed getting images from DigiScan 3 in GMS 2.6.2 (In 4.2).

9/3/25: Fixed getting names from autoloader before inventory is done (In 4.2).

8/26/25: Added ability to run a script continuously in the background.

8/22/25: SEM_4-2-7
8/21/25: Fixed Advanced scripting getting stuck with failures to acquire mutex
after failing to look up a camera (In 4.2).

8/20/25: Fixed varying filter parameters during tilt series on JEOL with omega
filter (In 4.2).

8/20/25: Added property STEMFocusStep which sets the STEM autofocus step size.

8/19/25: Fixed saving of intensity value for beam autocenter test shot
(In 4.2).

8/18/25: Print beam tilt values in Align Coma by CTF.

8/13/25: Initial addition of explicit support for DECTRIS cameras.

8/13/25: Prevented out of range values from being loaded into CTF Acquire