@@ -3,10 +3,17 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+9/23/25: Added script command to get the image shift values of the hole
+nearest to the center of a multishot pattern for an item.
+
+9/23/25: Added property to set the scaling factor put in the command file for
+aligning EER images in IMOD.
+
 9/23/25: Added script command to get the convergence angle on a Titan.
 
-9/23/25: During STEM focus calibration on a Titan, the slope is adjusted by 
-the proportional change in convergence angle.
+9/23/25: Convergence angle is recorded when STEM focus calibration is done on
+a Titan, and when autofocusing, the slope of the calibration is adjusted 
+proportionally for a change in convergence angle.
 
 9/17/25: Added property to set extra timeout for STEM images.
 
